cr-examples/mlir-tosa/lib/mlir_tosa_c_api.h

typedef struct MLIRFunction_* MLIRFunctionHandle;
typedef struct MLIRValue_* MLIRValueHandle;
typedef struct MLIRType_* MLIRTypeHandle;
MLIRValueHandle mlir_tosa_log(MLIRFunctionHandle function,
                              MLIRValueHandle input,
                              MLIRTypeHandle resultType);
MLIRValueHandle mlir_tosa_matmul(MLIRFunctionHandle function,
                                 MLIRValueHandle lhs,
                                 MLIRValueHandle rhs,
                                 MLIRTypeHandle resultType);
MLIRValueHandle mlir_tosa_relu(MLIRFunctionHandle function,
                               MLIRValueHandle input,
                               MLIRTypeHandle resultType);
MLIRValueHandle mlir_tosa_sigmoid(MLIRFunctionHandle function,
                                  MLIRValueHandle input,
                                  MLIRTypeHandle resultType);
MLIRValueHandle mlir_tosa_tanh(MLIRFunctionHandle function,
                               MLIRValueHandle input,
                               MLIRTypeHandle resultType);
/**
 * TOSA Conv2D operation.
 * Performs 2D convolution over the input tensor using the weight tensor.
 *
 * @param function Function handle
 * @param input Input tensor [N, H, W, C] (NHWC format)
 * @param weight Weight tensor [OC, KH, KW, IC] (OHWI format)
 * @param bias Bias tensor [OC]
 * @param pad Padding [top, bottom, left, right] (4 values)
 * @param stride Stride [height, width] (2 values)
 * @param dilation Dilation [height, width] (2 values)
 * @param resultType Result tensor type
 * @return Result value handle
 */
MLIRValueHandle mlir_tosa_conv2d(MLIRFunctionHandle function,
                                  MLIRValueHandle input,
                                  MLIRValueHandle weight,
                                  MLIRValueHandle bias,
                                  const int64_t* pad,
                                  const int64_t* stride,
                                  const int64_t* dilation,
                                  MLIRTypeHandle resultType);