cr-examples/mlir-tosa/src/main/java/mlir/tosa/bindings/mlir_tosa_c_api_h.java


    /**
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_log(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_log(MemorySegment function, MemorySegment input, MemorySegment resultType) {
        var mh$ = mlir_tosa_log.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_tosa_log", function, input, resultType);
            }
            return (MemorySegment)mh$.invokeExact(function, input, resultType);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_tosa_matmul {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_tosa_matmul");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_matmul(MLIRFunctionHandle function, MLIRValueHandle lhs, MLIRValueHandle rhs, MLIRTypeHandle resultType)
     * }
     */
    public static FunctionDescriptor mlir_tosa_matmul$descriptor() {
        return mlir_tosa_matmul.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_matmul(MLIRFunctionHandle function, MLIRValueHandle lhs, MLIRValueHandle rhs, MLIRTypeHandle resultType)
     * }
     */
    public static MethodHandle mlir_tosa_matmul$handle() {
        return mlir_tosa_matmul.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_matmul(MLIRFunctionHandle function, MLIRValueHandle lhs, MLIRValueHandle rhs, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_matmul$address() {
        return mlir_tosa_matmul.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_matmul(MLIRFunctionHandle function, MLIRValueHandle lhs, MLIRValueHandle rhs, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_matmul(MemorySegment function, MemorySegment lhs, MemorySegment rhs, MemorySegment resultType) {
        var mh$ = mlir_tosa_matmul.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_tosa_matmul", function, lhs, rhs, resultType);
            }
            return (MemorySegment)mh$.invokeExact(function, lhs, rhs, resultType);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_tosa_relu {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_tosa_relu");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_relu(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static FunctionDescriptor mlir_tosa_relu$descriptor() {
        return mlir_tosa_relu.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_relu(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MethodHandle mlir_tosa_relu$handle() {
        return mlir_tosa_relu.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_relu(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_relu$address() {
        return mlir_tosa_relu.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_relu(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_relu(MemorySegment function, MemorySegment input, MemorySegment resultType) {
        var mh$ = mlir_tosa_relu.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_tosa_relu", function, input, resultType);
            }
            return (MemorySegment)mh$.invokeExact(function, input, resultType);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_tosa_sigmoid {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_tosa_sigmoid");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_sigmoid(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static FunctionDescriptor mlir_tosa_sigmoid$descriptor() {
        return mlir_tosa_sigmoid.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_sigmoid(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MethodHandle mlir_tosa_sigmoid$handle() {
        return mlir_tosa_sigmoid.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_sigmoid(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_sigmoid$address() {
        return mlir_tosa_sigmoid.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_sigmoid(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_sigmoid(MemorySegment function, MemorySegment input, MemorySegment resultType) {
        var mh$ = mlir_tosa_sigmoid.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_tosa_sigmoid", function, input, resultType);
            }
            return (MemorySegment)mh$.invokeExact(function, input, resultType);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_tosa_tanh {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_tosa_tanh");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_tanh(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static FunctionDescriptor mlir_tosa_tanh$descriptor() {
        return mlir_tosa_tanh.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_tanh(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MethodHandle mlir_tosa_tanh$handle() {
        return mlir_tosa_tanh.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_tanh(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_tanh$address() {
        return mlir_tosa_tanh.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_tanh(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_tanh(MemorySegment function, MemorySegment input, MemorySegment resultType) {
        var mh$ = mlir_tosa_tanh.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_tosa_tanh", function, input, resultType);
            }
            return (MemorySegment)mh$.invokeExact(function, input, resultType);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_tosa_conv2d {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_tosa_conv2d");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_conv2d(MLIRFunctionHandle function, MLIRValueHandle input, MLIRValueHandle weight, MLIRValueHandle bias, const int64_t *pad, const int64_t *stride, const int64_t *dilation, MLIRTypeHandle resultType)
     * }
     */
    public static FunctionDescriptor mlir_tosa_conv2d$descriptor() {
        return mlir_tosa_conv2d.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_conv2d(MLIRFunctionHandle function, MLIRValueHandle input, MLIRValueHandle weight, MLIRValueHandle bias, const int64_t *pad, const int64_t *stride, const int64_t *dilation, MLIRTypeHandle resultType)
     * }
     */
    public static MethodHandle mlir_tosa_conv2d$handle() {
        return mlir_tosa_conv2d.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_conv2d(MLIRFunctionHandle function, MLIRValueHandle input, MLIRValueHandle weight, MLIRValueHandle bias, const int64_t *pad, const int64_t *stride, const int64_t *dilation, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_conv2d$address() {
        return mlir_tosa_conv2d.ADDR;
    }
